--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <main>
         <header>
-            <article>
-                <h2>Título do Artigo 1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nihil distinctio id expedita perferendis dicta itaque, doloribus possimus facere iste assumenda quidem minus. Ea corrupti veritatis, sequi porro repellendus et.</p>
-            </article>
-            <article>
-                <h2>Título do Artigo 2</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque aperiam maiores repellat consequatur quod cupiditate, eos assumenda amet libero ipsam debitis ut tempore accusamus tenetur? Debitis blanditiis rerum dolore odio!</p>
-            </article>
+            <h1>Cursos Grátis</h1>
         </header>
+        <article>
+            <h2>Curso de HTML 5</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nihil distinctio id expedita perferendis dicta itaque, doloribus possimus facere iste assumenda quidem minus. Ea corrupti veritatis, sequi porro repellendus et.</p>
+        </article>
+        <article>
+            <h2>Curso de CSS 3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque aperiam maiores repellat consequatur quod cupiditate, eos assumenda amet libero ipsam debitis ut tempore accusamus tenetur? Debitis blanditiis rerum dolore odio!</p>
+        </article>
     </main>
 </body>
 </html>
