--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Curso de HTML 5</h2>
+            <h2>Curso de HTML 5 e CSS 3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nihil distinctio id expedita perferendis dicta itaque, doloribus possimus facere iste assumenda quidem minus. Ea corrupti veritatis, sequi porro repellendus et.</p>
         </article>
         <article>
-            <h2>Curso de CSS 3</h2>
+            <h2>Curso de JavaScript</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque aperiam maiores repellat consequatur quod cupiditate, eos assumenda amet libero ipsam debitis ut tempore accusamus tenetur? Debitis blanditiis rerum dolore odio!</p>
         </article>
     </main>
