--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <article>
             <h2>Curso de HTML 5 e CSS 3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nihil distinctio id expedita perferendis dicta itaque, doloribus possimus facere iste assumenda quidem minus. Ea corrupti veritatis, sequi porro repellendus et.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quas omnis dolore doloribus corporis sequi assumenda. Odit ea nobis molestias, laudantium neque quaerat iste cupiditate consectetur in ratione, eligendi iusto.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
